--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
 
     <string name="app_name">LaWei</string>
     <string name="action_settings">Settings</string>
-
+    <string name="select_all">Select All</string>
+    <string name="deselect_all">Deselect All</string>
+    <string name="selected">selected</string>
 
     <string name="home_image_detail_image_pop_window_save_pic">保存图片</string>
     <string name="home_image_detail_image_pop_window_forward_weibo">转发微博</string>
